Tela principal com ícones

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
 
 <ion-content class="background" onscroll="true">
   <div id="feed" padding>
-    <img src="assets/icon/circular-shape.png" alt="circle">
+    <img src="assets/image/designmain.png" alt="circle">
     <h5>VEJA MAIS OPÇÕES</h5>
     <p>Toque para inserir seu NIS</p>
   </div>
@@ -23,30 +23,37 @@
       <ion-grid>
         <ion-row>
           <ion-col width-33 class="border-bottom-right">
-            <p class="menu-buttons">Calendário de Pagamento</p>
+            <img src="assets/icon/calendario.png">
+            <p>Calendário de Pagamento</p>
           </ion-col>
           <ion-col width-33 class="border-bottom-right">
-            <p class="menu-buttons">Calculadora de Rendimento</p>
+            <img src="assets/icon/calculadora.png">
+            <p>Calculadora de Rendimento</p>
           </ion-col>
           <ion-col width-33 class="border-bottom">
-            <p class="menu-buttons">Pontos de Atendimento</p>
+            <img src="assets/icon/atendimento.png">
+            <p>Pontos de Atendimento</p>
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col width-33 class="border-bottom-right">
-            <p class="menu-buttons">Outros Programas</p>
+          <ion-col padding-top width-33 class="border-bottom-right">
+            <img src="assets/icon/outrosprogramas.png">
+            <p>Outros Programas</p>
           </ion-col>
-          <ion-col width-33 class="border-bottom-right">
-            <p class="menu-buttons">Canal de Interatividade</p>
+          <ion-col padding-top width-33 class="border-bottom-right">
+            <img src="assets/icon/qrcode.png">
+            <p>Canal de Interatividade</p>
           </ion-col>
-          <ion-col width-33 class="border-bottom">
-            <p class="menu-buttons">Sobre o Bolsa Família</p>
+          <ion-col padding-top  width-33 class="border-bottom">
+            <img src="assets/icon/sobre.png">
+            <p>Sobre o Bolsa Família</p>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col width-33 class="border-right"></ion-col>
-          <ion-col width-33 class="border-right">
-            <p class="menu-buttons">Redes Sociais do MDSA</p>
+          <ion-col padding-top width-33 class="border-right">
+            <img src="assets/icon/redes.png">
+            <p>Redes Sociais do MDSA</p>
           </ion-col>
           <ion-col width-33></ion-col>
         </ion-row>
