Background side-menu atualizado

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,36 +24,36 @@
         <ion-row>
           <ion-col width-33 class="border-bottom-right">
             <img src="assets/icon/calendario.png">
-            <p>Calendário de Pagamento</p>
+            <p class="text-button">Calendário de Pagamento</p>
           </ion-col>
           <ion-col width-33 class="border-bottom-right">
             <img src="assets/icon/calculadora.png">
-            <p>Calculadora de Rendimento</p>
+            <p class="text-button">Calculadora de Rendimento</p>
           </ion-col>
           <ion-col width-33 class="border-bottom">
             <img src="assets/icon/atendimento.png">
-            <p>Pontos de Atendimento</p>
+            <p class="text-button">Pontos de Atendimento</p>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col padding-top width-33 class="border-bottom-right">
             <img src="assets/icon/outrosprogramas.png">
-            <p>Outros Programas</p>
+            <p class="text-button">Outros Programas</p>
           </ion-col>
           <ion-col padding-top width-33 class="border-bottom-right">
             <img src="assets/icon/qrcode.png">
-            <p>Canal de Interatividade</p>
+            <p class="text-button">Canal de Interatividade</p>
           </ion-col>
           <ion-col padding-top  width-33 class="border-bottom">
             <img src="assets/icon/sobre.png">
-            <p>Sobre o Bolsa Família</p>
+            <p class="text-button">Sobre o Bolsa Família</p>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col width-33 class="border-right"></ion-col>
           <ion-col padding-top width-33 class="border-right">
             <img src="assets/icon/redes.png">
-            <p>Redes Sociais do MDSA</p>
+            <p class="text-button">Redes Sociais do MDSA</p>
           </ion-col>
           <ion-col width-33></ion-col>
         </ion-row>
