--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content class="background" onscroll="true">
-  <div id="feed" padding>
+  <div id="feed" padding (click)="inputNis()">
     <img src="assets/image/designmain.png" alt="circle">
     <h5>VEJA MAIS OPÇÕES</h5>
     <p>Toque para inserir seu NIS</p>
