--- a/src/pages/modal-nis/modal-nis.html
+++ b/src/pages/modal-nis/modal-nis.html
@@ -1,4 +1,4 @@
-<ion-content no-border id="background">
+<ion-content no-border class="background">
   <div id="content">
     <img src="assets/image/numeronis1.png">
     <h6 padding-left>Libere mais opções no aplicativo</h6>
@@ -8,13 +8,9 @@
       <ion-label stacked>Número do NIS</ion-label>
       <ion-input type="text" [(ngModel)]="nis"></ion-input>
     </ion-item>
-    <ion-row>
-      <ion-col width-50>
-        <button ion-button color="md_black_1000" clear>Mais tarde</button>
-      </ion-col>
-      <ion-col width-50>
-        <button padding-left ion-button clear (click)="dismiss(nis)">Confirmar</button>
-      </ion-col>
-    </ion-row>
+    <ion-item no-lines>
+      <button ion-button item-left  (click)="dismiss(nis)" color="md_black_1000" clear>Mais tarde</button>
+      <button ion-button item-right (click)="dismiss(nis)" clear>Confirmar</button>
+    </ion-item>
   </div>
 </ion-content>
