Tela calendário provisória

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
     <ion-card-content>
       <ion-grid>
         <ion-row>
-          <ion-col width-33 class="border-bottom-right">
+          <ion-col width-33 class="border-bottom-right"  (click)="pushCalendario()">
             <img src="assets/icon/calendario.png">
             <p class="text-button">Calendário de Pagamento</p>
           </ion-col>
