--- a/src/pages/interatividade/interatividade.html
+++ b/src/pages/interatividade/interatividade.html
@@ -7,7 +7,7 @@
 <ion-content class="background">
   <div id="info" padding>
     <p>Canal de interação com aplicativo de programa Bolsa Família da TV Digital</p>
-    <img src="assets/image/governofederal.png" alt="Icone interatividade">
+    <img src="assets/icon/qrcode.png" alt="Icone interatividade">
   </div>
   <ion-card>
     <ion-card-header color="md_gray_600">Aproxime do QR code</ion-card-header>
