Tela atendimento provisória

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
             <img src="assets/icon/calculadora.png">
             <p class="text-button">Calculadora de Rendimento</p>
           </ion-col>
-          <ion-col width-33 class="border-bottom">
+          <ion-col width-33 class="border-bottom" (click)="pushAtendimento()">
             <img src="assets/icon/atendimento.png">
             <p class="text-button">Pontos de Atendimento</p>
           </ion-col>
