Tela sobre provisória

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
             <img src="assets/icon/qrcode.png">
             <p class="text-button">Canal de Interatividade</p>
           </ion-col>
-          <ion-col padding-top  width-33 class="border-bottom">
+          <ion-col padding-top  width-33 class="border-bottom" (click)="pushSobre()">
             <img src="assets/icon/sobre.png">
             <p class="text-button">Sobre o Bolsa Família</p>
           </ion-col>
