Div com usuario logado atualizada

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,11 +13,34 @@
 </ion-header>
 
 <ion-content class="background" onscroll="true">
-  <div id="dynamic" padding (click)="inputNis()">
+  <div id="not-logged" padding (click)="inputNis()">
     <img src="assets/image/designmain.png" alt="circle">
     <h5>VEJA MAIS OPÇÕES</h5>
     <p>Toque para inserir seu NIS</p>
   </div>
+  <!-- <div id="logged" padding-top (click)="inputNis()">
+    <p>Próximo Pagamento</p>
+    <h1>{{'26 de janeiro'}}</h1>
+    <ion-toolbar color="primary">
+      <ion-row>
+        <ion-col width-45>
+          <div class="box-content">
+            <img src="assets/icon/mensagens.png" alt="circle">
+            <ion-label>NOVAS MENSAGENS</ion-label>
+            <p>{{'3 Não lidas'}}</p>
+          </div>
+        </ion-col>
+        <div class="border-right"></div>
+        <ion-col width-45>
+          <div class="box-content">
+            <img src="assets/icon/parcelas.png" alt="circle">
+            <ion-label>PARCELAS {{2017}}</ion-label>
+            <p>{{'4 liberadas'}}</p>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-toolbar>
+  </div> -->
   <ion-card>
     <ion-card-content>
       <ion-grid>
