--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -1,7 +1,7 @@
 <ion-header id="header" no-border>
   <ion-footer no-border>
-    <ion-label color="md_white_1000" padding-left>{{nome}}</ion-label>
-    <ion-label color="md_white_1000" padding-left>{{nis}}</ion-label>
+    <ion-label color="md_white_1000" padding-left>{{_authService.getNome()}}</ion-label>
+    <ion-label color="md_white_1000" padding-left>{{_authService.getNis()}}</ion-label>
   </ion-footer>
 </ion-header>
 <ion-content>
