--- a/src/pages/modal-nis/modal-nis.html
+++ b/src/pages/modal-nis/modal-nis.html
@@ -9,7 +9,7 @@
       <ion-input type="text" [(ngModel)]="nis"></ion-input>
     </ion-item>
     <ion-item no-lines>
-      <button ion-button item-left  (click)="dismiss(nis)" color="md_black_1000" clear>Mais tarde</button>
+      <button ion-button item-left  (click)="dismiss(-1)" color="md_black_1000" clear>Mais tarde</button>
       <button ion-button item-right (click)="dismiss(nis)" clear>Confirmar</button>
     </ion-item>
   </div>
