--- a/src/pages/modal-nis/modal-nis.html
+++ b/src/pages/modal-nis/modal-nis.html
@@ -6,7 +6,7 @@
     a sua experiência no aplicativo Bolsa Família e ganhar acesso a novas funcionalidades</p>
     <ion-item padding-right>
       <ion-label stacked>Número do NIS</ion-label>
-      <ion-input type="text" [(ngModel)]="nis"></ion-input>
+      <ion-input type="tel" [(ngModel)]="nis"></ion-input>
     </ion-item>
     <ion-item no-lines>
       <button ion-button item-left  (click)="dismiss(-1)" color="md_black_1000" clear>Mais tarde</button>
