--- a/src/pages/extrato/extrato.html
+++ b/src/pages/extrato/extrato.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Atendimento</ion-title>
+    <ion-title>Extrato</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -12,7 +12,7 @@
     <!-- <button ion-button color="light">Acessar</button> -->
   </div>
   <ion-card>
-    <ion-card-header color="md_gray_600">Unidades de atendimento</ion-card-header>
+    <ion-card-header color="md_gray_600">Extrato de Parcelas</ion-card-header>
     <ion-card-content>
       <!-- empty -->
     </ion-card-content>
