--- a/src/pages/outros-programas/outros-programas.html
+++ b/src/pages/outros-programas/outros-programas.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Atendimento</ion-title>
+    <ion-title>Outros Programas</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -12,7 +12,7 @@
     <!-- <button ion-button color="light">Acessar</button> -->
   </div>
   <ion-card>
-    <ion-card-header color="md_gray_600">Unidades de atendimento</ion-card-header>
+    <ion-card-header color="md_gray_600">Conheça outros programas</ion-card-header>
     <ion-card-content>
       <!-- empty -->
     </ion-card-content>
