--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -5,10 +5,7 @@
 </ion-header>
 
 <ion-content class="background">
-  <div id="info" padding>
-    <img src="assets/icon/sobre.png" alt="Icone sobre">
-    <p>O bolsa família é um programa que contribui para combate a probeza e a desigualdade no Brasil.</p>
-  </div>
+  <div id="info" padding></div>
   <ion-card>
     <ion-card-header color="md_gray_600">Duvidas frequentes</ion-card-header>
     <ion-card-content>
