Serviço do Calendário de Pagamentos adicionado

--- a/src/pages/calendario/calendario.html
+++ b/src/pages/calendario/calendario.html
@@ -13,6 +13,9 @@
         <ion-label>NIS</ion-label>
         <ion-input type="tel" [(ngModel)]="nis"></ion-input>
       </ion-item>
+      <div padding>
+        <button ion-button color="secondary" small>Acessar</button>
+      </div>
     </div>
     <div class="next-pay" *ngIf="!flag">
       <p>Próximo Pagamento</p>
