--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
     <p>Toque para inserir seu NIS</p>
   </div>
   <div *ngIf="isValid" id="logged" padding-top>
-    <div (click)="pushCalendario(false)">
+    <div (click)="pushCalendario(_authService.nis.charAt(10))">
       <p>Próximo Pagamento</p>
       <h1>{{'26 de janeiro'}}</h1>
     </div>
@@ -47,7 +47,7 @@
     <ion-card-content>
       <ion-grid>
         <ion-row>
-          <ion-col width-33 class="border-bottom-right"  (click)="pushCalendario(true)">
+          <ion-col width-33 class="border-bottom-right"  (click)="pushCalendario(-1)">
             <img src="assets/icon/calendario.png">
             <p class="text-button">Calendário de Pagamento</p>
           </ion-col>
