--- a/src/pages/calendario/calendario.html
+++ b/src/pages/calendario/calendario.html
@@ -7,17 +7,17 @@
 <ion-content>
   <div id="info" padding>
     <!-- <img src="assets/icon/calendario.png" alt="Icone calendário"> -->
-    <div *ngIf="_digit==-1">
+    <div *ngIf="_flag">
       <p>Digite o último número do NIS</p>
       <ion-item no-lines>
         <ion-label>NIS</ion-label>
         <ion-input type="tel" [(ngModel)]="nis"></ion-input>
       </ion-item>
       <div padding>
-        <button ion-button color="secondary" small>Acessar</button>
+        <button ion-button color="secondary" small (click)="getPayDate(nis)">Acessar</button>
       </div>
     </div>
-    <div class="next-pay" *ngIf="_digit!=-1">
+    <div class="next-pay" *ngIf="!_flag">
       <p>Próximo Pagamento</p>
       <h1>{{'26 de janeiro'}}</h1>
     </div>
@@ -25,7 +25,68 @@
   <ion-card>
     <ion-card-header color="md_gray_600">Próximas datas de pagamento</ion-card-header>
     <ion-card-content>
-      <!-- empty -->
+      <ion-list *ngIf="_digit!=-1">
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>JAN</h2>
+          <h2 item-right>{{_date[0]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>FEV</h2>
+          <h2 item-right>{{_date[1]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>MAR</h2>
+          <h2 item-right>{{_date[2]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>ABR</h2>
+          <h2 item-right>{{_date[3]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>MAI</h2>
+          <h2 item-right>{{_date[4]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>JUN</h2>
+          <h2 item-right>{{_date[5]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>JUL</h2>
+          <h2 item-right>{{_date[6]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>AGO</h2>
+          <h2 item-right>{{_date[7]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>SET</h2>
+          <h2 item-right>{{_date[8]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>OUT</h2>
+          <h2 item-right>{{_date[9]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>NOV</h2>
+          <h2 item-right>{{_date[10]}}</h2>
+        </ion-item>
+        <ion-item class="box-date">
+          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <h2>DEZ</h2>
+          <h2 item-right>{{_date[11]}}</h2>
+        </ion-item>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
