Integração com Barcode Scanner

--- a/src/pages/calendario/calendario.html
+++ b/src/pages/calendario/calendario.html
@@ -27,62 +27,62 @@
     <ion-card-content>
       <ion-list *ngIf="_digit!=-1">
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>JAN</h2>
           <h2 item-right>{{_date[0]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>FEV</h2>
           <h2 item-right>{{_date[1]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>MAR</h2>
           <h2 item-right>{{_date[2]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>ABR</h2>
           <h2 item-right>{{_date[3]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>MAI</h2>
           <h2 item-right>{{_date[4]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>JUN</h2>
           <h2 item-right>{{_date[5]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>JUL</h2>
           <h2 item-right>{{_date[6]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>AGO</h2>
           <h2 item-right>{{_date[7]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>SET</h2>
           <h2 item-right>{{_date[8]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>OUT</h2>
           <h2 item-right>{{_date[9]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>NOV</h2>
           <h2 item-right>{{_date[10]}}</h2>
         </ion-item>
         <ion-item class="box-date">
-          <ion-icon md="md-calendar" color="primary" item-left></ion-icon>
+          <ion-icon name="calendar" md="md-calendar" color="primary" item-left></ion-icon>
           <h2>DEZ</h2>
           <h2 item-right>{{_date[11]}}</h2>
         </ion-item>
