Refatora side-menu | Update README
+ Mudança ícones
+ Adiciona/remove itens

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -8,49 +8,49 @@
   <ion-list>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-home" color="md_gray_600" padding-right></ion-icon>
+        <ion-icon name="home" color="md_gray_600" padding-right></ion-icon>
         Home
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-mail" color="md_gray_600" padding-right></ion-icon>
+        <ion-icon name="mail" color="md_gray_600" padding-right></ion-icon>
         Mensagens
       </ion-label>
     </ion-item>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-calendar" color="md_gray_600" padding-right></ion-icon>
+        <ion-icon name="calendar" color="md_gray_600" padding-right></ion-icon>
         Calendário
       </ion-label>
     </ion-item>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-checkbox-outline" color="md_gray_600" padding-right></ion-icon>
-        Parcelas
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label color="md_gray_600">
-        <ion-icon md="md-calculator" color="md_gray_600" padding-right></ion-icon>
-        Calculadora
+        <ion-icon name="logo-usd" color="md_gray_600" padding-right></ion-icon>
+        Extrato
       </ion-label>
     </ion-item>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-help-circle" color="md_gray_600" padding-right></ion-icon>
-        Ajuda
+        <ion-icon name="qr-scanner" color="md_gray_600" padding-right></ion-icon>
+        Interatividade
+      </ion-label>
+    </ion-item>
+    <ion-item no-lines>
+      <ion-label color="md_gray_600">
+        <ion-icon name="map" color="md_gray_600" padding-right></ion-icon>
+        Atendimento
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-settings" color="md_gray_600" padding-right></ion-icon>
-        Configurações
+        <ion-icon name="help-circle" color="md_gray_600" padding-right></ion-icon>
+        Sobre
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label color="md_gray_600">
-        <ion-icon md="md-exit" color="md_gray_600" padding-right></ion-icon>
+        <ion-icon name="exit" color="md_gray_600" padding-right></ion-icon>
         Sair
       </ion-label>
     </ion-item>
