Refatora tela sobre
+ Adiciona itens de dúvidas frequentes
+ Aumenta o head-content

--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -1,15 +1,42 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Sobre</ion-title>
+    <ion-title>Sobre o Bolsa Família</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="background">
-  <div id="info" padding></div>
+  <div id="head-content" padding>
+    <img src="assets/image/bolsa-familia.png" alt="Sobre Bolsa Família">
+    <p>O Bolsa Família é um programa de transferência direta de renda com
+       condicionalidades, que beneficia famílias em situação de pobreza e de
+       extrema pobreza.</p>
+    <p><u>Ver mais</u></p>
+  </div>
   <ion-card>
     <ion-card-header color="md_gray_600">Duvidas frequentes</ion-card-header>
     <ion-card-content>
-      <!-- empty -->
+      <div padding-bottom>
+        <details>
+          <summary>Porque cada família recebe um valor diferente?</summary>
+          <p padding-left>O valor do benefício é calculado por uma série de
+              condicionalidades. Conheça cada uma delas:</p>
+        </details>
+      </div>
+      <div padding-bottom>
+        <details>
+          <summary>Como solicitar 2a via do Cartão do Bolsa Família?</summary>
+          <p padding-left>Pela central de atendimento Caixa ao Cidadão no 0800 7260207
+           ou na agência da CAIXA.</p>
+         </details>
+      </div>
+      <div padding-bottom>
+        <details>
+          <summary>Como as famílias saem do Programa?</summary>
+          <p padding-left>As famílias saem do Programa Bolsa-Família por não atualizarem as
+            informações cadastrais ou porque melhoraram de renda, não se
+            adequando mais ao perfil para receber o benefício.</p>
+         </details>
+      </div>
     </ion-card-content>
   </ion-card>
 </ion-content>
