Renomea nomes do menu | Corrigi acento na palavra

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -21,7 +21,7 @@
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="calendar" color="md_gray_600" padding-right></ion-icon>
-        Calendário
+        Calendário de Pagamentos
       </ion-label>
     </ion-item>
     <ion-item no-lines>
@@ -33,19 +33,25 @@
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="qr-scanner" color="md_gray_600" padding-right></ion-icon>
-        Interatividade
+        Canal de Interatividade
       </ion-label>
     </ion-item>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="map" color="md_gray_600" padding-right></ion-icon>
-        Atendimento
+        Pontos de Atendimento
+      </ion-label>
+    </ion-item>
+    <ion-item no-lines>
+      <ion-label color="md_gray_600">
+        <ion-icon  name="add" color="md_gray_600" padding-right></ion-icon>
+        Outros programas
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label color="md_gray_600">
         <ion-icon name="help-circle" color="md_gray_600" padding-right></ion-icon>
-        Sobre
+        Sobre o Bolsa Família
       </ion-label>
     </ion-item>
     <ion-item>
