--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -13,7 +13,7 @@
     <p><u>Ver mais</u></p>
   </div>
   <ion-card>
-    <ion-card-header color="md_gray_600">Duvidas frequentes</ion-card-header>
+    <ion-card-header color="md_gray_600">Dúvidas frequentes</ion-card-header>
     <ion-card-content>
       <div padding-bottom>
         <details>
