Refatora tela outros programas
+ Adiciona programas
+ Adiciona logo cadastro único

--- a/src/pages/outros-programas/outros-programas.html
+++ b/src/pages/outros-programas/outros-programas.html
@@ -5,16 +5,39 @@
 </ion-header>
 
 <ion-content>
-  <div id="info" padding>
-    <!-- <img src="assets/icon/atendimento.png" alt="Icone atendimento">
-    <p>Insira seu CEP para localizar a unidade de atendimento CRAS mais próxima</p> -->
-    <!-- <ion-input type="text"></ion-input> -->
-    <!-- <button ion-button color="light">Acessar</button> -->
+  <div id="head-content" padding>
+    <img src="assets/image/cadastro-u.png" alt="Cadastro Único">
+    <p>O Cadastro Único é um conjunto de informações sobre as famílias brasileiras em situação de pobreza e extrema pobreza.</p>
+    <p><u>Ver mais</u></p>
   </div>
   <ion-card>
     <ion-card-header color="md_gray_600">Conheça outros programas</ion-card-header>
     <ion-card-content>
-      <!-- empty -->
+      <div padding-bottom>
+        <details>
+          <summary>Programa Bolsa Família</summary>
+        </details>
+      </div>
+      <div padding-bottom>
+        <details>
+          <summary>Tarifa Social de Energia Elétrica</summary>
+         </details>
+      </div>
+      <div padding-bottom>
+        <details>
+          <summary>Carteira do Idoso</summary>
+         </details>
+      </div>
+      <div padding-bottom>
+        <details>
+          <summary>Programa Brasil Alfabetizado</summary>
+         </details>
+      </div>
+      <div padding-bottom>
+        <details>
+          <summary>Auxílio Emergencial Financeiro</summary>
+         </details>
+      </div>
     </ion-card-content>
   </ion-card>
 </ion-content>
