--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -21,7 +21,7 @@
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="calendar" color="md_gray_600" padding-right></ion-icon>
-        Calendário de Pagamentos
+        Calendário de pagamentos
       </ion-label>
     </ion-item>
     <ion-item no-lines>
@@ -33,13 +33,13 @@
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="qr-scanner" color="md_gray_600" padding-right></ion-icon>
-        Canal de Interatividade
+        Canal de interatividade
       </ion-label>
     </ion-item>
     <ion-item no-lines>
       <ion-label color="md_gray_600">
         <ion-icon name="map" color="md_gray_600" padding-right></ion-icon>
-        Pontos de Atendimento
+        Pontos de atendimento
       </ion-label>
     </ion-item>
     <ion-item no-lines>
@@ -51,7 +51,7 @@
     <ion-item>
       <ion-label color="md_gray_600">
         <ion-icon name="help-circle" color="md_gray_600" padding-right></ion-icon>
-        Sobre o Bolsa Família
+        Sobre o bolsa família
       </ion-label>
     </ion-item>
     <ion-item>
