--- a/src/pages/interatividade/interatividade.html
+++ b/src/pages/interatividade/interatividade.html
@@ -6,16 +6,19 @@
 
 <ion-content class="background">
   <div id="info" padding>
+    <img padding src="assets/image/qr-codes.png" alt="QR Code">
     <p>Canal de interação com aplicativo de programa Bolsa Família da TV Digital</p>
-    <button ion-button large full color="secondary" (click)="qrCodeDecode()">
-      <ion-icon name="qr-scanner" padding-right></ion-icon>
-      Scan
-    </button>
   </div>
   <ion-card>
-    <ion-card-header color="md_gray_600">Conteúdo da Mensagem</ion-card-header>
+    <ion-card-header color="md_gray_600">Mensagem</ion-card-header>
     <ion-card-content>
       {{_content}}
     </ion-card-content>
   </ion-card>
+  <ion-footer padding no-border>
+    <button ion-button large full color="primary" (click)="qrCodeDecode();">
+      <ion-icon name="qr-scanner" padding-right></ion-icon>
+      Interagir
+    </button>
+  </ion-footer>
 </ion-content>
