Refatora tela mensagens
+ Adiciona menu lidas/não-lidas
+ Altera nome da barra de menu do canal de interatividade
+ Adiciona icone de mensagem

--- a/src/pages/interatividade/interatividade.html
+++ b/src/pages/interatividade/interatividade.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Interatividade</ion-title>
+    <ion-title>Canal de Interatividade</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="background">
-  <div id="info" padding>
+  <div id="head-content" padding>
     <img padding src="assets/image/qr-codes.png" alt="QR Code">
     <p>Canal de interação com aplicativo de programa Bolsa Família da TV Digital</p>
   </div>
