Adiciona pacote model e util
+ Cria classes modelos (Mensagem, Parcela, Usuario)
+ Cria enum com status da parcela

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,8 +36,8 @@
         <ion-col width-45 (click)="pushExtrato()">
           <div class="box-content">
             <img src="assets/icon/parcelas.png" alt="circle">
-            <ion-label>PARCELAS {{2017}}</ion-label>
-            <p>{{'4 liberadas'}}</p>
+            <ion-label>PAGAMENTOS</ion-label>
+            <p>Extrato</p>
           </div>
         </ion-col>
       </ion-row>
